# logalizer

./: CMakeLists.txt  Curses.hpp  Dockerfile  Log.hpp  LogLine.hpp  LogReader.hpp  Options.hpp  README.md  Screen.hpp  main.cpp
src/: Curses.hpp  DataModel.hpp  Exec.hpp  IDataModel.hpp  IExec.hpp  Log.hpp  LogLine.hpp  LogReader.hpp  Options.hpp  Screen.hpp  main.cpp
unit_tests/: CMakeLists.txt  test_datamodel.cpp
unit_tests/mocks/: ExecMock.hpp
